--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.1.0/dist/js/adminlte.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.1.0/dist/css/adminlte.min.css"> -->
 
-<link rel="stylesheet" href="styles.3ec4462c479f255e379c.css"></head>
+<link rel="stylesheet" href="angular_exam/styles.3ec4462c479f255e379c.css"></head>
 
 <body class="mat-typography">
     <app-root></app-root>
-<script src="runtime-es2015.a4dadbc03350107420a4.js" type="module"></script><script src="runtime-es5.a4dadbc03350107420a4.js" nomodule="" defer=""></script><script src="polyfills-es5.ea28eaaa5a4162f498ba.js" nomodule="" defer=""></script><script src="polyfills-es2015.1ca0a42e128600892efa.js" type="module"></script><script src="main-es2015.ae682c49416c748c3b42.js" type="module"></script><script src="main-es5.ae682c49416c748c3b42.js" nomodule="" defer=""></script></body>
+<script src="runtime-es2015.a4dadbc03350107420a4.js" type="module"></script><script src="angular_exam/runtime-es5.a4dadbc03350107420a4.js" nomodule="" defer=""></script><script src="polyfills-es5.ea28eaaa5a4162f498ba.js" nomodule="" defer=""></script><script src="angular_exam/polyfills-es2015.1ca0a42e128600892efa.js" type="module"></script><script src="main-es2015.ae682c49416c748c3b42.js" type="module"></script><script src="angular_exam/main-es5.ae682c49416c748c3b42.js" nomodule="" defer=""></script></body>
 
 </html>
